EQEMu Changelog (Started on Sept 24, 2003 15:50)
-------------------------------------------------------
==01/20/2010==
Trevius: Added quest::wearchange(slot, texture) to allow any slot to be changed to any texture/weapon model.  This works just like the #wc <slot>, <texture> command.
blmille2: Implemented Calliav line of spells.
Derision: Reverted flawed change to client_packet.cpp.

==01/19/2010==
WildcardX: Tweaked bot spell healing ai to improve general group healing.
WildcardX: Fixed a zone crash caused by adding an non-existent mob to a bot's hate list.
blmille2: Implemented Suspend Minion and Persistent Minion AA.
garim12: Mastery of the Past AA Ranger/Beastlord version fix.
WildcardX: Added new command, #distance to return the in game distance between you and your target.
WildcardX: Bot casters will now stay in ange to cast heals and other spells during combat.

==01/18/2010==
WildcardX: Potential bug fix for #bot camp zone crash bug. Continued work on bot animations. (thanks much to Frumph and Secrets for their assistance)
joligario: New EVENT_WAYPOINT_ARRIVE and EVENT_WAYPOINT_DEPART. The old EVENT_WAYPOINT will be removed shortly, so be sure to replace all occurences of EVENT_WAYPOINT with EVENT_WAYPOINT_DEPART in all your current scripts.
joligario: Faction values of zero are no longer written to the faction_values table.
WildcardX: Smoothed out bot melee animations. Another attempt at isolating the #bot camp zone crash bug.

==01/17/2010==
WildcardX: More bot ai refactoring that is focused on making the bot movements more smooth and accurate. Still a lingering issue when bots fight a mob that has a giant body type.
WildcardX: Bots in melee range of their target will now seperate themselves some so they won't appear so much on top of each other in combat. "Tank" classes will always be closer than "DPS" classes.