@@ -139,6 +139,7 @@ public:
 	bool IsSitting();
 	bool IsStanding();
 	bool IsBotCasterCombatRange(Mob *target);
+	bool CalculateNewPosition2(float x, float y, float z, float speed, bool checkZ = true) ;
 
 	// AI Methods
 	virtual bool AICastSpell(Mob* tar, int8 iChance, int16 iSpellTypes);
